--- a/_sass/_folio-base.scss
+++ b/_sass/_folio-base.scss
@@ -1,4 +1,4 @@
-$base-font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-weight: 400;
 
 // Screen sizes
@@ -9,6 +9,7 @@ $max-menu-height: 100px;
 
 $f-color-orange: #da6a2d;
 $f-color-purple: #38307f;
+$f-color-blue: #4c7ea5;
 $f-color-dark-grey: #515251;
 $f-color-light-grey: #737272;
 $f-color-lighter-grey: lighten($f-color-light-grey, 50%);
