--- a/_sass/bootstrap/_dropdowns.scss
+++ b/_sass/bootstrap/_dropdowns.scss
@@ -10,11 +10,13 @@
   height: 0;
   margin-left: 2px;
   vertical-align: middle;
-  border-top:   $caret-width-base dashed;
-  border-top:   $caret-width-base solid \9; // IE8
+ // border-top:   $caret-width-base dashed;
+ // border-top:   $caret-width-base solid \9; // IE8
+  border-top: solid $caret-width-base white;
   border-right: $caret-width-base solid transparent;
   border-left:  $caret-width-base solid transparent;
 }
+
 
 // The dropdown wrapper (div)
 .dropup,
