--- a/assets/main.scss
+++ b/assets/main.scss
@@ -25,7 +25,8 @@ body {
   padding-top: 0px;
   margin-bottom: 46px;
   font-family: $base-font-family;
-  font-size: 14px;
+  font-size: 12px;
+  letter-spacing: 0.05em;
 }
 
 .page-content {
@@ -80,7 +81,7 @@ ul, ol {
 
 // Pad the search in the nav bar to line it up
 .form {
-   padding-right: 30px;
+   padding-right: 15px;
 }
 
 .is-collapsible {
