Link top navbar to Start section

--- a/_includes/folio-navbar.html
+++ b/_includes/folio-navbar.html
@@ -93,7 +93,7 @@
         <div class="title">
           <div class="symbol"><p></p></div>
           <div class="text">
-            <a href="https://dev.folio.org/doc/"><p>Documentation</p></a>
+            <a href="https://dev.folio.org/start/"><p>Documentation</p></a>
           </div>
         </div>
       </div>
