Do not show empty ToC slider FOLIO-978

--- a/_includes/js-content.html
+++ b/_includes/js-content.html
@@ -9,5 +9,8 @@ $(function() {
     $('#js-toc-wrapper').css({ "margin-top": "10em" });
     $('footer').append('<div id="folio-spacer"></div>');
   }
+  else {
+    $('#js-toc-wrapper').remove();
+  }
 });
 </script>
