--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,9 @@
     <br>
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-        <ul class="contact-list" style="list-style:none;">
-          <li>&copy; 2018 The Open Library Foundation</li>
-        </ul>
+        <div class="contact-list">
+          &nbsp;&nbsp;&copy; 2018 The Open Library Foundation</li>
+        </div>
 		<div style="padding-bottom: 50em;"></div>
       </div>
     </div>
