--- a/_includes/reference_nav.html
+++ b/_includes/reference_nav.html
@@ -1,7 +1,6 @@
- 
-<ul id=submenu class="subnav" style="background-color: transparent;">
-<a href="javascript:void(0);" style="font-size:15px; color: #333333; text-decoration: none; background-color: #da6a2d; padding-left: 5px; padding-right: 5px; border-style: solid; border-color: #da6a2d; border-radius: 5px; border-width: 1px;" class="icon" onclick="myFunction()">MENU</a>
-<div id=multipage>
+<ul id=submenu class="subnav">
+ <a href="javascript:void(0);" class="toc-menu icon" onclick="myFunction()">MENU</a>
+ <div id=multipage>
  {% for section in site.data.reference %}
         {% for item in section.reference %}
           {% assign item_url = item | prepend:"/reference/" | append:"/" %}
@@ -10,9 +9,9 @@
 		  <div id="js-toc" class="toc">
 		  </div>			  
 		  {% else %}
-		  <li style="border-left-style: solid; border-left-color: #EEE;"><a id=subsubmenu href="{{ item_url | prepend: site.baseurl }}">{{ section.title }}</a></li>
+		  <li class="pg-li-border"><a id=subsubmenu href="{{ item_url | prepend: site.baseurl }}">{{ section.title }}</a></li>
 		  {% endif %}		  
         {% endfor %}
-{% endfor %}
+ {% endfor %}
 </div>
 </ul>
