--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -16,7 +16,7 @@
           <div class="row">				
             <ul class="nav navbar-nav navbar-right">
               <li {% if page.sectionid=='overview' %} class="active" {% endif %}>
-                <a href="#" class="primary-nav dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Overview&nbsp;<i class="arrow down"></i></a>	
+                <a href="#" class="top-nav dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Overview&nbsp;<i class="arrow down"></i></a>	
                 <ul class="dropdown-menu">
 		          <li><a href="{{site.foliourl}}">About</a></li>
 			      <li><a href="{{site.roadmapurl}}">Platform & Roadmap</a></li>
@@ -27,7 +27,7 @@
                 </ul>							   
 			  </li>				
               <li {% if page.sectionid=='developers' %} class="active" {% endif %}>
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color: #f8f8f8">Developers&nbsp;<i class="arrow down"></i></a>
+                <a href="#" class="top-nav dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developers&nbsp;<i class="arrow down"></i></a>
                 <ul class="dropdown-menu">
                   <li><a href="/">Documentation</a></li>
 			      <li><a href="{{ "/source/components/" | prepend: site.baseurl }}">Source Code</a></li>
@@ -37,18 +37,17 @@
                 </ul>						
 			  </li>	
 			  <li {% if page.sectionid=='community' %} class="active" {% endif %}>
-			    <a href="{{site.wikiurl}}" style="color: #f8f8f8">Project Wiki <img style="margin-left: 1px; margin-bottom: 3px;" src="{{site.baseurl}}/images/exlink.png"></a>
+			    <a href="{{site.wikiurl}}" class="top-nav">Project Wiki <img class="ext-lnk" src="{{site.baseurl}}/images/exlink.png"></a>
 			  </li>				
 			  <li {% if page.sectionid=='news' %} class="active" {% endif %}>
-				<a href="{{ site.discussurl }}" style="color: #f8f8f8">Discussion Boards <img style="margin-left: 1px; margin-bottom: 3px;" src="{{site.baseurl}}/images/exlink.png"></a>
+				<a href="{{ site.discussurl }}" class="top-nav">Discussion Boards <img class="ext-lnk" src="{{site.baseurl}}/images/exlink.png"></a>
 			  </li>							
             </ul>
 		  </div> <!-- end row -->
 		</div>
       </div> <!-- end container -->		
-      <div class="invert" style="background-color: #f8f8f8">
+      <div class="sec-nav invert">
 	    <div class="container">
-          <!-- Toggle for navbar - the top navigation bar -->  	
           <div class="navbar-header">		 
             <a class="navbar-brand" href="/"><img height=18px src="{{site.baseurl}}/images/devlogo.png"></a>	
 		  </div>	   
@@ -99,10 +98,10 @@
         </div> <!-- end container -->
       </div> <!-- end invert -->
 	</div> <!-- end invert -->
-	<div id="navbar3" class="collapse navbar-collapse" style="max-height: 200px;">
+	<div id="navbar3" class="top-res-nav collapse navbar-collapse">
 	  <ul class="nav navbar-nav navbar-right visible-xs">
         <li {% if page.sectionid=='overview' %} class="active" {% endif %}>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color: #f8f8f8">Overview&nbsp;<i class="arrow down"></i></a>	
+          <a href="#" class="top-nav dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Overview&nbsp;<i class="arrow down"></i></a>	
           <ul class="dropdown-menu">
 		    <li><a href="{{site.foliourl}}">About</a></li>
 			<li><a href="{{site.roadmapurl}}">Platform & Roadmap</a></li>
@@ -113,7 +112,7 @@
           </ul>							   
 	    </li>				
         <li {% if page.sectionid=='developers' %} class="active" {% endif %}>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color: #f8f8f8">Developers&nbsp;<i class="arrow down"></i></a>
+          <a href="#" class="top-nav dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developers&nbsp;<i class="arrow down"></i></a>
           <ul class="dropdown-menu">
             <li><a href="/">Documentation</a></li>
 			<li><a href="{{ "/source/components/" | prepend: site.baseurl }}">Source Code</a></li>
@@ -123,10 +122,10 @@
           </ul>						
 		</li>	
 	    <li {% if page.sectionid=='community' %} class="active" {% endif %}>
-		  <a href="{{site.wikiurl}}" style="color: #f8f8f8">Project Wiki <img style="margin-left: 1px; margin-bottom: 3px;" src="{{site.baseurl}}/images/exlink.png"></a>
+		  <a href="{{site.wikiurl}}" class="top-nav">Project Wiki <img class="ext-lnk" src="{{site.baseurl}}/images/exlink.png"></a>
 		</li>				
 		<li {% if page.sectionid=='news' %} class="active" {% endif %}>
-	      <a href="{{ site.discussurl }}" style="color: #f8f8f8">Discussion Boards <img style="margin-left: 1px; margin-bottom: 3px;" src="{{site.baseurl}}/images/exlink.png"></a>
+	      <a href="{{ site.discussurl }}" class="top-nav">Discussion Boards <img class="ext-lnk" src="{{site.baseurl}}/images/exlink.png"></a>
 		</li>							
       </ul>
 	</div>
