--- a/_layouts/multipagedev.html
+++ b/_layouts/multipagedev.html
@@ -8,7 +8,7 @@
     <main class="page-content" aria-label="Content">
         <div class="container">	
           <div class="row">
-             <div style="padding-left:10px" class="col-md-12">
+             <div class="col-md-12">
 		           {{ content }}
 			         <br>
              </div>
