--- a/assets/main.scss
+++ b/assets/main.scss
@@ -32,14 +32,12 @@ body {
 .page-content {
   padding-top: 25px;
   padding-bottom: 20px;
-//  padding-left: 15px;
   
    h1 {
 	font-size: 1.5em;
     font-weight: 100;
     text-transform: uppercase;
 	letter-spacing: 0.01em;
-//	margin-top: -50px;
   }
   
    h2 {
@@ -55,7 +53,8 @@ body {
   h4 {
     font-size: 1.1em;
     font-weight: 300;
-    padding-top: 16px; }
+    padding-top: 16px; 
+  }
 	  
 }
 
@@ -67,7 +66,6 @@ body {
 
 ul, ol {
     margin-left: 0px;
-//	padding-left: 15px;
 }
 
 // Padding/Styling for Responsive menu
