Adjust some topnav links and text to match PoC

--- a/_includes/folio-navbar.html
+++ b/_includes/folio-navbar.html
@@ -93,7 +93,7 @@
         <div class="title">
           <div class="symbol"><p></p></div>
           <div class="text">
-            <a href="https://dev.folio.org/start/"><p>Documentation</p></a>
+            <a href="https://dev.folio.org/"><p>Documentation</p></a>
           </div>
         </div>
       </div>
@@ -129,7 +129,7 @@
         <div class="title">
           <div class="symbol"><p></p></div>
           <div class="text">
-            <a href="https://issues.folio.org/"><p>Issue Tracker</p></a>
+            <a href="https://issues.folio.org/"><p>Tracker</p></a>
           </div>
         </div>
       </div>
