Use current folio orange for top background

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -97,6 +97,10 @@ form input {
   font-size: 1.3em;
 }
 nav.folio {
+  background-color: $f-color-orange;
+  div.item {
+    background-color: $f-color-orange;
+  }
   div.dropdown {
     z-index: 9;
   }
