Add test banner-icon for narrow
Disabled.
To ensure that such will fit.

--- a/_sass/classic-jekyll-theme.scss
+++ b/_sass/classic-jekyll-theme.scss
@@ -185,7 +185,7 @@ $banner-icon-padding-widest:			0px;
 // Example: $banner-icon-url-...: url("#{$baseurl}/assets/img/wide-icon.png");
 // Set to 'none' if there is no banner icon.
 //
-$banner-icon-url-narrow:				url("#{$baseurl}/assets/img/cog-wheels-60x43.png");
+$banner-icon-url-narrow:				url("#{$baseurl}/images/test-22x22.png");
 $banner-icon-url-medium:				url("#{$baseurl}/assets/img/cog-wheels-120x68.png");
 $banner-icon-url-widest:				url("#{$baseurl}/assets/img/cog-wheels-240x135.png");
 
