Utilise menubar-icon
Only display the icon for the top navbar.
Position it using viewport units.

--- a/_includes/folio-navbar.html
+++ b/_includes/folio-navbar.html
@@ -1,4 +1,5 @@
 <nav class="menubar folio">
+  <div class="menubar-icon"></div>
   <div class="item">
     <input type="checkbox" id="f1-checkbox">
     <div class="title">
