Enable banner-icon narrow

--- a/_sass/classic-jekyll-theme.scss
+++ b/_sass/classic-jekyll-theme.scss
@@ -129,7 +129,7 @@ $banner-background-widest:				$f-color-orange;
 // Controls display of the icon.
 // Note: Disabling the banner also disables the icon.
 //
-$banner-icon-enabled-narrow:			false;
+$banner-icon-enabled-narrow:			true;
 $banner-icon-enabled-medium:			false;
 $banner-icon-enabled-widest:			false;
 
