Colour the home link orange

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -99,6 +99,12 @@ form input {
 .menubar-icon {
   display: none;
 }
+div.item {
+  p.home {
+    color: $f-color-orange;
+    font-weight: bold;
+  }
+}
 nav.folio {
   background-color: $f-color-orange;
   div.item {
