--- a/_includes/column-2-search.html
+++ b/_includes/column-2-search.html
@@ -5,5 +5,9 @@
 <div>
   <p>Search terms are combined with 'AND'.</p>
   <p>Using <a href="https://github.com/bvaughn/js-search">js-search</a>.</p>
+  <p>See its <a href="https://github.com/bvaughn/js-search/blob/master/README.md#tokenization">assistance notes</a>.</p>
+  <p>
+    Using its prefix-based search.
+    So term "cat" is indexed as "c", "ca", and "cat".
 </div>
 <!-- end of include tertiary-column.html -->
